fixed overflow and adding button whatsapp

--- a/src/app.scss
+++ b/src/app.scss
@@ -423,6 +423,7 @@ footer {
         text-decoration: none;
         font-weight: 600;
         transition: .2s ease;
+        z-index: 100;
         ion-icon {
             margin-right: 8px;
         }
